[gd_scene load_steps=2 format=3 uid="uid://c8qxjk2m6vwqy"]

[ext_resource type="Script" path="res://_ui/inventory_slot.gd" id="1_slot"]

[node name="InventorySlot" type="PanelContainer"]
custom_minimum_size = Vector2(56, 56)
script = ExtResource("1_slot")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="IconRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="HighlightOverlay" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="AmountLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 12
horizontal_alignment = 2
vertical_alignment = 2
